# TFG-ABB-IRB140-ROS2

./: README.md  cerebro.py
RaspberryPi5/: arreglar_red_pi.sh  cerebro.py  ejercicio1.py  ejercicio2.py  ejercicios_ros.py  index.html  iniciar_robot.sh  master_robot.sh  mover_robot.py  prueba_robot.py  test_server.py  test_simulacion.py
RobotStudio/: ROS_common.sys  ROS_messages.sys  ROS_motion.mod  ROS_motionServer.mod  ROS_socket.sys  ROS_stateServer.mod
VM_workspace/: CMakeLists.txt  abb_irb140_final.urdf  ver_robot.sh
VM_workspace/abb_control/: setup.cfg
VM_workspace/abb_irb140_moveit_config/config/: ros2_controllers.yaml
VM_workspace/rviz/: remoto.rviz
VM_workspace/rviz/default.rviz/: rviz.rviz
abb_control/: setup.py
abb_control/abb_control/: simple_move.py
abb_irb140_moveit_config/config/: moveit_controllers.yaml
